[tool.poetry]
name = "eye_tracker"
version = "0.1.0"
description = ""
authors = ["batbat99 <hbatayneh@outlook.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
cmake = "^3.21.4"
opencv-python = "4.4.*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
